removed white space, tabulation and formatting fixes bug 734178

--- a/webapp-php/css/jquery.tooltip.css
+++ b/webapp-php/css/jquery.tooltip.css
@@ -1,9 +1,12 @@
 #tooltip {
-	position: absolute;
-	z-index: 3000;
-	border: 1px solid #111;
-	background-color: #eee;
-	padding: 5px;
-	opacity: 0.85;
+    position: absolute;
+    z-index: 3000;
+    border: 1px solid #111;
+    background-color: #eee;
+    padding: 5px;
+    opacity: 0.85;
 }
-#tooltip h3, #tooltip div { margin: 0; }
+#tooltip h3,
+#tooltip div {
+    margin: 0;
+}
